<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Juked</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Juked</string>
    <string name="match_rate_status">Match rate: </string>
    <string name="on_duration_status">On duration: </string>
    <string name="off_duration_status">Off duration: </string>
    <string name="repeat_mode_status">Repeat: </string>
    <string name="upload_interval_status">Upload interval</string>
    <string name="notification_response_status">Notification response: </string>
    <string name="duplicate_status">Duplicate: </string>
    <string name="category_upload">Upload Interval</string>

    <string-array name="MatchRateListDisplayValue">
        <item>1 FP/S</item>
        <item>2 FP/S</item>
        <item>4 FP/S</item>
        <item>8 FP/S</item>
        <item>16 FP/S</item>
        <item>32 FP/S</item>
    </string-array>
    <string-array name="MatchRateListReturnValue">
        <item>ONE_PER_SECOND</item>
        <item>TWO_PER_SECOND</item>
        <item>FOUR_PER_SECOND</item>
        <item>EIGHT_PER_SECOND</item>
        <item>SIXTEEN_PER_SECOND</item>
        <item>THIRTY_TWO_PER_SECOND</item>
    </string-array>
    <string-array name="UploadIntervalListDisplayValue">
        <item>Immediately</item>
        <item>Select Hour value</item>
        <item>Select Minute value</item>
    </string-array>
    <string-array name="UploadIntervalListReturnValue">
        <item>IMMEDIATELY</item>
        <item>HOUR_VALUE</item>
        <item>MINUTE_VALUE</item>
    </string-array>
    <string-array name="NotificationResponseListDisplayValue">
        <item>Always</item>
        <item>Only in background</item>
        <item>Never</item>
    </string-array>
    <string-array name="NotificationResponseListReturnValue">
        <item>ALWAYS</item>
        <item>ONLY_IN_BACKGROUND</item>
        <item>NEVER</item>
    </string-array>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_mainactivity">mainactivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>